fixed minor bugs

--- a/scrhmwrk.dtx
+++ b/scrhmwrk.dtx
@@ -793,7 +793,7 @@
      \parshape 1 1em \linewidth}% body font
     {}% indent amount
     {\itshape}% head font
-    {:}% punctuation after theorem head
+    {.}% punctuation after theorem head
     { }% space after theorem head, ' ', or \newline
     {\thmnote{#3}}% theorem head spec (can be left empty, meaning `normal')
   
